Fix Dark Mode

--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -126,4 +126,8 @@ table td:first-child {
         color: #f5f5f5;
     }
     
+    pre {
+        color: #a2a2a2;
+    }
+
 }
